fix broken css on talk dropdown

--- a/app/eventyay/static/pretixcontrol/scss/main.scss
+++ b/app/eventyay/static/pretixcontrol/scss/main.scss
@@ -823,9 +823,11 @@ h1 .label {
     border: none !important;
     box-shadow: 0 1px 3px 0 rgba(0,0,0,0.1), 0 1px 2px -1px rgba(0,0,0,0.1), 0 10px 15px -3px rgba(0,0,0,0.1), 0 4px 6px -4px rgba(0,0,0,0.1) !important;
     padding: 0 !important;
+    right: 32px !important;
+    left: auto !important;
 
     &.bottom {
-        margin-top: -10px !important;
+        margin-top: -12px !important;
     }
 
     > .arrow {
